Version 1.6.5
- BUG: fixed access to freed memory. (Stefan)
- BUG: Y coordinate in log statistics graph Repository had 
       inconsistent scaling. (Stefan Fuhrmann)

Version 1.6.4
- CHG: Improved startup performance of the log cache. (Stefan)
- CHG: The check state in the commit dialog is now preserved
       unconditionally after a failed commit. (Stefan)
- CHG: When marking files as resolved, only text files are now
       first checked for maybe still existing conflict markers. (Stefan)
- BUG: The export dialog showed the wrong url when exporting from
       the log dialog. (Stefan)
- BUG: The /fromurl parameter for the merge dialog was not used if the
       option "use wc url as from: url" was not set. (Stefan)
- BUG: In the log dialog, the context menu for a changed file could
       show the wrong item as the default action. (Stefan)
- BUG: The autocompletion in the commit dialog didn't show
       all possible entries. (Stefan)
- BUG: parsing of php files for autocompletion didn't work. (Stefan)
- BUG: After a merge, the "finished" message was not shown. (Stefan)
- BUG: Compression was not enabled for http(s) connections. (Stefan)
- BUG: The statistics dialog could show wrong average numbers. (Stefan)

Version 1.6.3
- NEW: All binaries are now digitally signed. (Stefan)
- CHG: Some small improvements to the status cache. (Stefan)
- CHG: When diffing from the log dialog, the peg revision is set to
       the selected revision instead of HEAD. (Stefan)
- CHG: Deleted folders are not removed from the filesystem but only marked
       as deleted so they can be committed separately. (Stefan)
- CHG: Change merges to be non-forced. (Stefan)
- CHG: Performance improvment in TortoiseMerge when showing 
       long lines. (Stefan)
- BUG: If a commit failed, TSVN could crash in case the svn library returned
       an empty error object. (Stefan)
- BUG: The merge options to ignore whitespaces were ignored. (Stefan)